Fix menu overflow scrolling

--- a/_assets/scss/components/_general.scss
+++ b/_assets/scss/components/_general.scss
@@ -8,3 +8,9 @@ section{
 a{
   color: inherit;
 }
+.app-inner{
+  &--nav{
+    max-height: 100vh;
+    overflow: hidden;
+  }
+}
